fixed footer so that it's fixed but user can see all results without the footer covering it

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 /* ====================== */
 /* ===== APP.JS ====== */
 /* ====================== */
-
+html {
+    height: 100%;
+}
 body {
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,6 +12,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: ghostwhite;
+  position: relative;
+  padding-bottom: 6rem;
+  min-height: 100%;
+
 }
 
 code {
@@ -68,7 +74,6 @@ form input {
   border: 1px solid black;
 }
 
-
 /* ====================== */
 /* ===== MYNEWS.JS ====== */
 /* ====================== */
@@ -99,13 +104,15 @@ form input {
 /* ====================== */
 
 footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0.5rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
   background: white;
-  box-shadow: 1px 1px 1px gray;
+  box-shadow: 1px 1px 2px gray;
 }
